d/rules: only save modules if /run/qemu isn't noexec
As discussed there is no point in saving them as long as /run/qemu is
mounted as noexec - also this can for the time being serve as a opt-in.
Therefore only save old modules when the underlying mount point of
/run/qemu is not noexec.

Signed-off-by: Christian Ehrhardt <christian.ehrhardt@canonical.com>

--- a/debian/rules
+++ b/debian/rules
@@ -233,7 +233,7 @@ binary-arch:
 
 # save block-extra loadable modules on upgrades
 # other module types for now (5.0) can't be loaded at runtime, only at startup
-	echo 'case $$1 in (upgrade|deconfigure) mkdir -p ${SAVEMODDIR}; cp -p ${libdir}/qemu/block-*.so ${SAVEMODDIR}/;; esac' \
+	echo 'case $$1 in (upgrade|deconfigure) [ -d /run/qemu ] || exit; ! findmnt --noheadings --target /run/qemu/ | grep -q noexec || exit; mkdir -p ${SAVEMODDIR}; cp -p ${libdir}/qemu/block-*.so ${SAVEMODDIR}/;; esac' \
 	  >> debian/qemu-block-extra.prerm.debhelper
 	echo 'case $$1 in (remove) rm -f ${SAVEMODDIR}/block-*.so;; esac' \
 	  >> debian/qemu-block-extra.postrm.debhelper
