--- a/debian/rules
+++ b/debian/rules
@@ -325,6 +325,9 @@ endif
 #	    mv debian/tmp${libdir}/qemu/audio-alsa.so \
 #		debian/qemu-system-common${libdir}/qemu/
 
+# for --enable-module-upgrades to work in more environments
+	install -D -m 0644 debian/run-qemu.mount debian/qemu-block-extra/lib/systemd/system/run-qemu.mount
+
 endif # linux
 
 endif # enable_system
@@ -362,6 +365,7 @@ ifeq (${enable_system},enable)
 endif
 	dh_installinit -a -pqemu-guest-agent
 	dh_installsystemd -a -pqemu-guest-agent --no-start --no-enable
+	dh_installsystemd -a -pqemu-block-extra --no-start --no-enable --no-restart-on-upgrade --name=run-qemu.mount
 	dh_link -a
 	dh_lintian -a
 	dh_strip -a
