--- a/debian/rules
+++ b/debian/rules
@@ -142,7 +142,7 @@ ifneq ($(filter $(DEB_HOST_ARCH),amd64),)
 		--disable-gnutls --disable-gcrypt --disable-auth-pam \
 		--disable-replication --disable-bochs --disable-cloop \
 		--disable-dmg --disable-parallels --disable-qed --disable-vdi \
-		--disable-sheepdog --disable-capstone --disable-libpmem --disable-plugins \
+		--disable-capstone --disable-libpmem --disable-plugins \
 		--disable-snappy --disable-lzo --disable-usb-redir \
 		--disable-libusb --disable-smartcard --disable-libnfs  \
 		--disable-libiscsi --disable-rbd  --disable-spice --disable-attr \
