--- a/debian/rules
+++ b/debian/rules
@@ -127,6 +127,15 @@ b/qemu/config-stamp: configure
 		$(QEMU_CONFIGURE_OPTIONS) 
 	touch $@
 
+b/qemu/build-stamp: b/qemu/config-stamp
+	$(MAKE) -C b/qemu V=${V}
+ifeq (${enable_system},enable)
+	rm -f b/qemu/pc-bios/bamboo.dtb b/qemu/pc-bios/canyonlands.dtb
+	dtc -o b/qemu/pc-bios/bamboo.dtb pc-bios/bamboo.dts
+	dtc -o b/qemu/pc-bios/canyonlands.dtb pc-bios/canyonlands.dts
+endif
+	touch $@
+
 qemu-builds := qemu
 
 # microvm build:
@@ -163,6 +172,10 @@ b/microvm/config-stamp: configure
 		$(QEMU_CONFIGURE_OPTIONS)
 	touch $@
 
+b/microvm/build-stamp: b/microvm/config-stamp
+	$(MAKE) -C b/microvm V=${V}
+	touch $@
+
 ifneq ($(filter $(DEB_HOST_ARCH),amd64),)
 qemu-builds := ${qemu-builds} microvm
 endif
@@ -190,6 +203,10 @@ b/xen/config-stamp: configure
 		$(QEMU_CONFIGURE_OPTIONS)
 	touch $@
 
+b/xen/build-stamp: b/xen/config-stamp
+	$(MAKE) -C b/xen V=${V}
+	touch $@
+
 ifeq ($(VENDOR),UBUNTU)
 ifneq ($(filter $(DEB_HOST_ARCH),amd64 i386),)
 qemu-builds := ${qemu-builds} xen
@@ -210,6 +227,14 @@ b/user-static/config-stamp: configure
 		--target-list="$(addsuffix -linux-user,${user_targets})"
 	touch $@
 
+b/user-static/build-stamp: b/user-static/config-stamp
+	# we use this invocation to build just the binaries
+	$(MAKE) -C b/user-static V=${V} $(addprefix qemu-,${user_targets})
+	sed -e 's/qemu\\-user\\-static/qemu\\-user/g' \
+	    -e 's/ (static version)//' \
+	    debian/qemu-user-static.1 > debian/qemu-user.1
+	touch $@
+
 ifeq ($(enable_linux_user),enable)
 qemu-builds := ${qemu-builds} user-static
 endif
@@ -218,36 +243,7 @@ b/config-stamp: $(patsubst %, b/%/config-stamp, ${qemu-builds})
 	touch $@
 
 build-arch: b/build-stamp
-b/build-stamp: b/config-stamp
-	dh_testdir
-
-	# system and utils build
-	$(MAKE) -C b/qemu V=${V}
-ifeq (${enable_system},enable)
-	rm -f b/qemu/pc-bios/bamboo.dtb b/qemu/pc-bios/canyonlands.dtb
-	dtc -o b/qemu/pc-bios/bamboo.dtb pc-bios/bamboo.dts
-	dtc -o b/qemu/pc-bios/canyonlands.dtb pc-bios/canyonlands.dts
-endif
-
-ifneq ($(filter $(DEB_HOST_ARCH),amd64),)
-	# microvm system
-	$(MAKE) -C b/microvm V=${V}
-endif
-
-ifeq ($(VENDOR),UBUNTU)
-ifneq ($(filter $(DEB_HOST_ARCH),amd64 i386),)
-	$(MAKE) -C b/xen V=${V}
-endif
-endif
-
-ifeq ($(enable_linux_user),enable)
-	# user-static build
-	# we use this invocation to build just the binaries
-	$(MAKE) -C b/user-static V=${V} $(addprefix qemu-,${user_targets})
-	sed -e 's/qemu\\-user\\-static/qemu\\-user/g' \
-	    -e 's/ (static version)//' \
-	    debian/qemu-user-static.1 > debian/qemu-user.1
-endif
+b/build-stamp: $(patsubst %, b/%/build-stamp, ${qemu-builds})
 	touch $@
 
 define inst-system
