--- a/debian/rules
+++ b/debian/rules
@@ -314,7 +314,7 @@ b/microvm/config-stamp: configure
 	touch $@
 
 b/microvm/build-stamp: b/microvm/config-stamp
-	$(MAKE) -C b/microvm V=${V}
+	$(MAKE) -C b/microvm V=${V} qemu-system-x86_64
 	touch $@
 
 b/microvm/install: b/microvm/build-stamp | before-binary-arch
@@ -351,7 +351,7 @@ b/xen/config-stamp: configure
 	touch $@
 
 b/xen/build-stamp: b/xen/config-stamp
-	$(MAKE) -C b/xen V=${V}
+	$(MAKE) -C b/xen V=${V} qemu-system-i386 qemu-system-x86_64
 	touch $@
 
 b/xen/install: b/xen/build-stamp | before-binary-arch
